Added first section with styles to the webpage

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="sec-1">
             <nav class="nav-bar">
-                <span>Header Logo</span>
+                <span class="logo">Header Logo</span>
                 <ul class="nav-items">
                     <li>header link one</li>
                     <li>header link two</li>
@@ -19,17 +19,17 @@
             </nav>
             <div class="sub-1">
                 <div class="left-1">
-                    <h1>
+                    <h1 class="hero main">
                         This website is awesome
                     </h1>
-                    <p>
+                    <p class="hero sec">
                         This website has some subtext that goes here under the main title.
                         It's smaller font and the color is lower contrast.
                     </p>
                     <button>Sign up</button>
                 </div>
-                    <div>
-                        this is a placeholder for an image
+                    <div class="placeholder">
+                        <p>this is a placeholder for an image</P>
                     </div>
             </div>
         </div>
