--- a/index.html
+++ b/index.html
@@ -34,7 +34,25 @@
             </div>
         </div>
         <div class="sec-2">
-
+            <h2 class="info-header">Some random information.</h2>
+            <div class="cards">
+                <div class="card">
+                    <img>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <img>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <img>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <img>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
         </div>
         <div class="sec-3">
 
