--- a/index.html
+++ b/index.html
@@ -54,8 +54,12 @@
                 </div>
             </div>
         </div>
-        <div class="sec-3">
-
+        <div class="quote">
+            <p class="quote text">This is an inspiring quote, or a testimonial from a customer.
+                Maybe it's just filling up space, or maybe people will actually read it.
+                Who knows? All know is that it looks nice.
+            </p>
+            <p class="quote author">-Thor, God of Thunder</p>
         </div>
         <div class="sec-4">
 
