--- a/index.html
+++ b/index.html
@@ -61,11 +61,15 @@
             </p>
             <p class="quote author">-Thor, God of Thunder</p>
         </div>
-        <div class="sec-4">
-
+        <div class="call-to-action">
+            <div class="sub-action">
+                <h2>Call to action! It's time!</h2>
+                <p>sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="action">Sign up</button>
         </div>
         <div class="footer">
-
+            Copyright &copy The Odin Project 2021
         </div>
     </div>
 </body>
