Fix layout magin and padding issues and edit README file

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </ul>
             </nav>
             <div class="sub-1">
-                <div class="left-1">
+                <div class="hero">
                     <h1 class="hero main">
                         This website is awesome
                     </h1>
@@ -28,9 +28,9 @@
                     </p>
                     <button>Sign up</button>
                 </div>
-                    <div class="placeholder">
-                        <p>this is a placeholder for an image</P>
-                    </div>
+                <div class="placeholder">
+                    <p>this is a placeholder for an image</P>
+                </div>
             </div>
         </div>
         <div class="sec-2">
@@ -62,11 +62,11 @@
             <p class="quote author">-Thor, God of Thunder</p>
         </div>
         <div class="call-to-action">
-            <div class="sub-action">
+            <div class="action-text">
                 <h2>Call to action! It's time!</h2>
                 <p>sign up for our product by clicking that button right over there!</p>
             </div>
-            <button class="action">Sign up</button>
+            <button class="action-signup">Sign up</button>
         </div>
         <div class="footer">
             Copyright &copy The Odin Project 2021
